--- a/package.json
+++ b/package.json
@@ -1,23 +1,12 @@
 {
-  "name": "unbound",
+  "name": "class-assignment",
   "version": "1.0.0",
-  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "cors": "^2.8.5",
     "fs-extra": "^10.0.0"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
-    "@types/fs-extra": "^11.0.4"
   }
 }
