--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
-    "version": 2,
-    "builds": [{ "src": "server.js", "use": "@vercel/node" }],
-    "routes": [{ "src": "/(.*)", "dest": "server.js" }]
-  }
+  "version": 2,
+  "builds": [
+    { "src": "api/students.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/students", "dest": "api/students.js" }
+  ]
+}
